<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">极伽咖啡</string>
    <string name="empty">empty</string>
    <string name="machine_washing">咖啡机清洗中，请稍候使用</string>
    <string name="welcome_get_machine_config">正在获取咖啡机配置</string>
    <string name="welcome_set_temperature">正在设置锅炉温度</string>
    <string name="welcome_set_temperature_fail">设置咖啡机锅炉温度失败</string>
    <string name="welcome_set_temperature_timeout">设置咖啡机锅炉温度超时</string>
    <string name="welcome_set_temperature_success">设置咖啡机锅炉温度成功</string>
    <string name="welcome_start_wash_machine">正在清洗咖啡机</string>
    <string name="welcome_wash_machine_fail">咖啡机清洗失败</string>
    <string name="welcome_wash_machine_success">咖啡机清洗成功</string>
    <string name="welcome_get_dosing_list_fail">获取原料列表失败</string>
    <string name="welcome_get_dosing_list_success">获取原料列表成功</string>
    <string name="welcome_sync_stock_success">库存同步成功</string>
    <string name="welcome_sync_stock_fail">库存同步失败</string>
    <string name="welcome_enter_control_panel_tip">再按一次进入咖啡机后台</string>
    <string name="network_connecting">连接中&#8230;</string>
    <string name="network_connect_failed">未连接</string>
    <string name="network_no_connect">无网络</string>
    <string name="network_server_is_not_available">连接服务器失败，稍后将重试连接</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="network_forbidden_login">您被服务器禁止登录，详询客服</string>
    <string name="network_need_verify_again">在其他咖啡机上使用了相同的ID，请确认</string>
    <string name="network_failed_unavailable">网络连接失败，请稍候重试</string>
    <string name="network_kick_title">身份失效</string>
    <string name="network_kick_i_know">知道了</string>
    <string name="sdcard_not_enough">存储空间已不足，无法保存此次多媒体消息</string>
    <string name="sdcard_not_enough_warning">剩余存储空间很少，建议清理存储卡</string>
    <string name="sdcard_deny">请插入SD卡</string>
    <string name="login_account_is_null">请输入帐号</string>
    <string name="login_password_is_null">请输入密码</string>
    <string name="login_add_dosing_init">填料初始化</string>
    <string name="login_coffee_machine_title">咖啡机启动</string>
    <string name="login_coffee_machine_start">启动</string>
    <string name="login_coffee_info_label">咖啡机信息</string>
    <string name="login_coffee_machine_id">机器编号：</string>
    <string name="login_coffee_machine_pwd">认证密码：</string>
    <string name="login_add_dosing_by_ml">单位ml</string>
    <string name="login_add_dosing_by_g">单位g</string>
    <string name="login_add_dosing_by_num">单位个</string>
    <string name="login_init_dosing">初始化填料信息</string>
    <string name="login_coffee_info">咖啡机登录</string>
    <string name="login_coffee_info_login">登录</string>
    <string name="login_coffee_machine_id_hint">请输入咖啡机编号</string>
    <string name="login_coffee_machine_pwd_hint">请输入认证密码</string>
    <string name="ad_kicked_title">离线提示</string>
    <string name="ad_kicked_btn_ok">重新登录</string>
    <string name="ad_kicked_btn_cancel">取消</string>
    <string name="relogin_kicked_title">重登提示</string>
    <string name="relogin_kicked_message">服务器连接失败，请重新登录。</string>
    <string name="relogin_kicked_btn_ok">确定</string>
    <string name="relogin_kicked_btn_cancel">取消</string>
    <string name="setTemp">正在设置咖啡机</string>
    <string name="home_coffee_machine_no">NO.%s</string>
    <string name="home_discount_reduction">欢迎光临极伽咖啡！推广期%1$s折后满%2$s减%3$s！</string>
    <string name="home_discount_only">欢迎光临极伽咖啡！推广期%s折！</string>
    <string name="home_reduction_only">欢迎光临极伽咖啡！推广期满%1$s减%2$s！</string>
    <string name="home_title_info">随时随地寻找你身边的咖啡</string>
    <string name="fetch_coffee_input_code_tip">输入取货码取货</string>
    <string name="fetch_coffee_qrcode_tip">Coffee Me\nAPP扫码取货</string>
    <string name="fetch_input_edit_hint">输入取货码</string>
    <string name="fetch_is_requesting">正在取货，请勿重复提交请求</string>
    <string name="verify_code_is_null">取货码不能为空</string>
    <string name="exchange_code_is_null">兑换码不能为空</string>
    <string name="exchange_is_requesting">正在兑换，请勿重复提交请求</string>
    <string name="exchange_input_edit_hint">输入兑换码</string>
    <string name="coffee_info_volume_format">%dML</string>
    <string name="coffee_info_volume_note_format">NOTE：%1$s咖啡只有%2$dML</string>
    <string name="coffee_info_sugar_note">所选糖量咖啡机自动为您加入</string>
    <string name="coffee_info_nosugar_note">本产品不能单独选择加糖量哦</string>
    <string name="coffee_info_sweet_note">此饮品不加糖也甜哦</string>
    <string name="coffee_info_price">优惠价：</string>
    <string name="coffee_info_oriprice">原价：</string>
    <string name="coffee_info_notice">提示：</string>
    <string name="coffee_info_sugar_title">添加糖量</string>
    <string name="coffee_info_num_title">购买数量</string>
    <string name="coffee_info_nosugar">不加</string>
    <string name="coffee_info_onesugar">1份</string>
    <string name="coffee_info_twosugar">2份</string>
    <string name="coffee_info_threesugar">3份</string>
    <string name="add_sugar_tip">加糖</string>
    <string name="pay_add_no_sugar">0份糖</string>
    <string name="pay_add_little_sugar">1份糖</string>
    <string name="pay_add_middle_sugar">2份糖</string>
    <string name="pay_add_more_sugar">3份糖</string>
    <string name="pay_scan_this_qrcode">请扫描此二维码</string>
    <string name="pay_ali_qrcode_tips">支付宝扫码付款流程</string>
    <string name="pay_ali_wave_tips">支付宝声波付款流程</string>
    <string name="pay_weixin_qrcode_tips">微信扫码付款流程</string>
    <string name="pay_timer_tip">%d秒</string>
    <string name="pay_timer_tip_left">（%d秒）</string>
    <string name="pay_request_qrcode">正在请求二维码</string>
    <string name="pay_generate_qrcode">正在生成二维码</string>
    <string name="pay_waiting_scan">待支付</string>
    <string name="pay_pay_success">支付成功</string>
    <string name="pay_pay_title">状态</string>
    <string name="pay_choose_payment">选择支付方式</string>
    <string name="pay_by_sonicwave_tip">请用支付宝当面付付款</string>
    <string name="pay_qrcode_price">%s元</string>
    <string name="pay_coffee_price_format">¥%s</string>
    <string name="pay_cart_total_label">原&#12288;价:</string>
    <string name="pay_cart_actual_label">优惠价:</string>
    <string name="pay_cart_favor_submeet_label">满减优惠</string>
    <string name="pay_cart_favor_discount_label">折扣优惠</string>
    <string name="pay_cart_price_format">¥%s</string>
    <string name="pay_cart_total_price_format">共计%s元</string>
    <string name="pay_cart_title_cart">购物车</string>
    <string name="pay_cart_title_pay">支付</string>
    <string name="pay_cart_no_drinks_to_pay">购物车没有可供支付的饮品</string>
    <string name="pay_cart_stock_insufficient">物料不足，不能继续添加咖啡</string>
    <string name="pay_favour_tip">总额¥%1$.2f - 折扣¥%2$.2f - 满减¥%3$.2f  </string>
    <string name="pay_favour_tip_discount">总额¥%1$.2f - 折扣¥%2$.2f</string>
    <string name="pay_favour_tip_meetsub">总额¥%1$.2f - 满减¥%2$.2f</string>
    <string name="pay_actual_pay">实付¥%.2f</string>
    <string name="pay_qrcode_detail_tip">共优惠¥%1$.2f, 只需支付¥%2$.2f</string>
    <string name="pay_qrcode_detail_tip_no_favour">只需支付¥%.2f</string>
    <string name="pay_qrcode_detail_total_price_title">总价</string>
    <string name="pay_qrcode_detail_favor_title">已优惠</string>
    <string name="pay_qrcode_detail_actual_pay_title">实付</string>
    <string name="pay_qrcode_error_norecipe">无法获取咖啡配方</string>
    <string name="pay_qrcode_ali_info">使用支付宝扫一扫付款</string>
    <string name="pay_qrcode_wx_info">使用微信扫一扫付款</string>
    <string name="pay_qrcode_abc_info">使用农行扫一扫付款</string>
    <string name="cart_exceeds_max_num">一次最多可购买9杯</string>
    <string name="cart_total_price">¥%.2f</string>
    <string name="cart_favour_discount">-¥%.2f</string>
    <string name="cart_favour_meetsub">-¥%.2f</string>
    <string name="cart_actual_pay">¥%.2f</string>
    <string name="cart_total_num">共%d杯</string>
    <string name="cart_sugar">加糖量</string>
    <string name="cart_num">购买数量</string>
    <string name="make_coffee_prepare">饮品正准备制作，请耐心等候</string>
    <string name="make_coffee_failed">饮品制作失败,24小时内退款回原处</string>
    <string name="make_coffee_retry">您的饮品尚未取走，请取走杯子后重试</string>
    <string name="make_coffee_successful_and_continue">%s已经制作完成，请取货\n取货后将自动制作下一杯饮品</string>
    <string name="make_coffee_successful_all">饮品全部制作成功，请享用。</string>
    <string name="make_coffee_cart_status">%1$s正在制作中\n还剩%2$d杯饮品正在排队制作</string>
    <string name="make_coffee_status">正在制作中，请耐心等候</string>
    <string name="make_coffee_user_cancel">饮品制作已取消，未制作饮品将在24小时内退款</string>
    <string name="make_coffee_cancel">确定要取消剩余订单？</string>
    <string name="make_coffee_status_making">制作中，请稍候...</string>
    <string name="make_coffee_status_successful_all">饮品全部制作完毕，欢迎再次购买！</string>
    <string name="make_coffee_status_fail_local">对不起，咖啡制作失败，24小时内退款回原处！</string>
    <string name="make_coffee_status_fail_fetch">对不起，咖啡制作失败，请在APP上选择重试或退款！</string>
    <string name="make_coffee_order_is_null">订单列表为空！</string>
    <string name="make_coffee_cart_makeing">制作中...</string>
    <string name="make_coffee_cart_makefail">制作失败</string>
    <string name="make_coffee_fetchcup">上位顾客好像忘记取杯了\n请先取杯后继续</string>
    <string name="make_coffee_finish_fetchcup">制作完成\n请从下方窗口取杯后继续</string>
    <string name="make_coffee_finish_desk_fetchcup">制作完成\n请取杯后放入空杯继续</string>
    <string name="make_coffee_noopen">制作时请勿打开取杯窗口</string>
    <string name="exchange_error_no_coffeeindent">对不起，无此咖啡订单</string>
    <string name="exchange_error_have_fetch">对不起，咖啡被取过</string>
    <string name="exchange_error_system">对不起，系统错误</string>
    <string name="exchange_error_no_pay">对不起，订单未付款</string>
    <string name="exchange_error_drawback">对不起，订单已退款</string>
    <string name="exchange_error_dosing_not_enough">对不起，配料不足</string>
    <string name="exchange_error_default">对不起，未知错误</string>
    <string name="exchange_error_have_fetch_by_other_mac">对不起，咖啡被其他咖啡机取过</string>
    <string name="exchange_error_cant_exchange">对不起，该兑换码无法在该机器上取货</string>
    <string name="exchange_error_exceed">对不起，该兑换码已过期</string>
    <string name="exchange_error_timeout">对不起，回滚时间超过安全阈值</string>
    <string name="exchange_error_fetchcode">对不起，您输入的是取货码，请切换至取货界面</string>
    <string name="exchange_error_exchangecode">对不起，您输入的是兑换码，请切换至兑换界面</string>
    <string name="exchange_error_lowstocks">对不起，库存物料不足</string>
    <string name="exchange_error_netorlogin">对不起，服务不可用</string>
    <string name="pay_error_waiting_pay">等待支付</string>
    <string name="pay_error_cancel_indent">交易被关闭</string>
    <string name="pay_error_timeout">请求二维码超时，请重试</string>
    <string name="pay_no_coupon">促销杯数余额不足，请减少购买杯数</string>
    <string name="pay_restore_price">促销已结束，请等待系统恢复价格</string>
    <string name="error_configuration">请先配置串口参数</string>
    <string name="error_security">没有串口读写权限</string>
    <string name="error_unknown">串口无法打开</string>
    <string name="control_set_dosing_is_null">有一个或多个料盒未设置</string>
    <string name="control_add_dosing">配料设置</string>
    <string name="control_test_machine">机器调试</string>
    <string name="control_other">机器设置</string>
    <string name="control_update_dosing">添加物料库存</string>
    <string name="control_reset_dosing">校准物料库存</string>
    <string name="control_fix_error_sure">确认修复问题了吗?</string>
    <string name="control_doing_list_is_null">原料列表为空</string>
    <string name="help_come_soon">敬请期待</string>
    <string name="help_instruction_step1">1.&#12288;点击屏幕进入购买界面</string>
    <string name="help_instruction_step2">2.&#12288;选择饮品</string>
    <string name="help_instruction_step3">3.&#12288;选择支付方式</string>
    <string name="help_instruction_step4">4.&#12288;支付完成等待取货</string>
    <string name="help_instruction_step5">5.&#12288;制作完成取走饮品</string>
    <string name="help_instruction_buy">使用说明</string>
    <string name="help_instruction_kefu">联系我们</string>
    <string name="help_instruction_kefu_phone">客服热线：0571-86042121</string>
    <string name="help_instruction_kefu_time">客服时间：周一至周日 09:30--21:30</string>
    <string name="bglogin_coffee_info">后台登录</string>
    <string name="bglogin_coffee_machine_id_hint">请输入用户名</string>
    <string name="bglogin_coffee_machine_pwd_hint">请输入密码</string>
</resources>