<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rlCartPachageElementNumContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_toLeftOf="@+id/llCartPachageElementNumContainer"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvCartPackageElementSugarHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/llCartPackageElementSugarContainer"
            android:layout_alignRight="@+id/llCartPackageElementSugarContainer"
            android:lines="1"
            android:paddingLeft="15dp"
            android:text="@string/coffee_info_nosugar_note"
            android:textColor="@color/norcolor"
            android:textSize="18dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvCartPackageElementName"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLength="5"
            android:text="巧克力咖啡"
            android:textColor="@color/norcolor"
            android:textSize="18dp" />
        <LinearLayout
            android:id="@+id/llCartPackageElementSugarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvCartPackageElementName"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:lines="1"
                android:text="@string/coffee_info_sugar_title"
                android:textColor="@color/norcolor"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/tvCartPackageElementSugarNum0"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dp"
                android:layout_toRightOf="@+id/tvCartPackageElementName"
                android:background="@drawable/selector_sugar_num"
                android:gravity="center"
                android:text="@string/coffee_info_nosugar"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvCartPackageElementSugarNum1"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:layout_marginRight="7dp"
                android:layout_toRightOf="@+id/tvCartPackageElementSugarNum0"
                android:background="@drawable/selector_sugar_num"
                android:gravity="center"
                android:text="@string/coffee_info_onesugar"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvCartPackageElementSugarNum2"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:layout_marginRight="7dp"
                android:layout_toRightOf="@+id/tvCartPackageElementSugarNum1"
                android:background="@drawable/selector_sugar_num"
                android:gravity="center"
                android:text="@string/coffee_info_twosugar"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvCartPackageElementSugarNum3"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:layout_toRightOf="@+id/tvCartPackageElementSugarNum2"
                android:background="@drawable/selector_sugar_num"
                android:gravity="center"
                android:text="@string/coffee_info_threesugar"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llCartPachageElementNumContainer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/cart_num"
            android:textColor="@color/norcolor"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/llCartPachageElementNum"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>


</RelativeLayout>